# web-jack-svelte

./: README.md  package-lock.json  package.json  todo.md  vite.config.js
jack-vm/: Cargo.toml  modularize.js
jack-vm/pkg/: jack_vm.d.ts  jack_vm.js  jack_vm_bg.wasm  jack_vm_bg.wasm.d.ts  package.json
jack-vm/src/: charmap.rs  jacklib.rs  lib.rs  memory.rs  parser.rs  program.rs
src/lib/: Button.svelte  ButtonContainer.svelte  CanvasDisplay.svelte  CodeMirror.svelte  MemoryCell.svelte  Modal.svelte  PyodideExample.svelte  buttonHandlers.js  bytecode.js  codeMirrorTheme.js  jackcode.js
src/routes/: +page.svelte
src/routes/about/: +page.svelte
src/routes/license/: +page.svelte
static/pyodide/: compilation_engine.py  jack_analyzer.py  jack_token.py  jack_tokenizer.py  symbol_table.py  vm_writer.py
